indexのerbテンプレートを作成

--- a/index.erb
+++ b/index.erb
@@ -18,7 +18,7 @@
       <h1>a Dictionary <span>(β)</span></h1>
     </div>
     <div id="main">
-      <form method="GET" action="./result.php">
+      <form method="GET" action="./result">
         <input type="text" name="text" placeholder="en to ja" class="in" />
         <input type="submit" name="btn" value="translate" class="btn" />
       </form>
@@ -27,6 +27,7 @@
 
 <footer>
   <p>&copy; 2013 a Dictionary by <a href="https://twitter.com/shirokuro331" target="_blank">@shirokuro331</a></p>
+  <p>modified by <a href="https://twitter.com/kitak" target="_blank">@kitak</a></p>
 </footer>
 </body>
 </html>
