faradayでAPIを呼び出す

--- a/views/result.erb
+++ b/views/result.erb
@@ -14,7 +14,7 @@
   <section id="content">
     <div class="search-text"><h1><%= @keyword %></h1></div>
 
-    <p class="result"><%= result_word %></p>
+    <p class="result"><%= @result_word %></p>
       
     </div> <!-- #container -->
 
